- added $LogRSyslogStatusMessages configuration directive
  permitting to turn off rsyslog start/stop/HUP messages. See Debian
  ticket http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=463793
- added new config directive $omfileForceChown to (try to) fix some broken
  system configs.
  See ticket for details: http://bugzilla.adiscon.com/show_bug.cgi?id=150
- added option to use unlimited-size select() calls
  Thanks to varmjofekoj for the patch
- debugondemand mode caused backgrounding to fail - close to a bug, but I'd
  consider the ability to background in this mode a new feature...
- imported changes from 4.5.7 and below
---------------------------------------------------------------------------
Version 4.5.7  [v4-beta] (rgerhards), 2009-11-18
- added a so-called "On Demand Debug" mode, in which debug output can
  be generated only after the process has started, but not right from
  the beginning. This is assumed to be useful for hard-to-find bugs.
  Also improved the doc on the debug system.
- bugfix (kind of): check if TCP connection is still alive if using TLS
  Thanks to Jonathan Bond-Caron for the patch.
- bugfix [imported from 4.4.3]: $ActionExecOnlyOnceEveryInterval did
  not work.
---------------------------------------------------------------------------
Version 4.5.6  [v4-beta] (rgerhards), 2009-11-05
- bugfix: named pipes did no longer work (they always got an open error)
  this was a regression from the omfile rewrite in 4.5.0
- bugfix(minor): diag function returned wrong queue memeber count
  for the main queue if an active DA queue existed. This had no relevance
  to real deployments (assuming they are not running the debug/diagnostic
  module...), but sometimes caused grief and false alerts in the 
  testbench.
- included some important fixes from v4-stable:
  * bugfix: invalid handling of zero-sized messages
  * bugfix: zero-sized UDP messages are no longer processed
  * bugfix: random data could be appended to message