@@ -12,10 +12,14 @@ Version 4.7.0  [v4-devel] (rgerhards), 2009-09-??
 - added new config directive $omfileForceChown to (try to) fix some broken
   system configs.
   See ticket for details: http://bugzilla.adiscon.com/show_bug.cgi?id=150
+- added $EscapeControlCharacterTab config directive
+  Thanks to Jonathan Bond-Caron for the patch.
 - added option to use unlimited-size select() calls
   Thanks to varmjofekoj for the patch
 - debugondemand mode caused backgrounding to fail - close to a bug, but I'd
   consider the ability to background in this mode a new feature...
+- bugfix (kind of): check if TCP connection is still alive if using TLS
+  Thanks to Jonathan Bond-Caron for the patch.
 - imported changes from 4.5.7 and below
 ---------------------------------------------------------------------------
 Version 4.5.7  [v4-beta] (rgerhards), 2009-11-18
@@ -23,8 +27,6 @@ Version 4.5.7  [v4-beta] (rgerhards), 2009-11-18
   be generated only after the process has started, but not right from
   the beginning. This is assumed to be useful for hard-to-find bugs.
   Also improved the doc on the debug system.
-- bugfix (kind of): check if TCP connection is still alive if using TLS
-  Thanks to Jonathan Bond-Caron for the patch.
 - bugfix [imported from 4.4.3]: $ActionExecOnlyOnceEveryInterval did
   not work.
 ---------------------------------------------------------------------------
